--- a/portfolio.html
+++ b/portfolio.html
@@ -28,97 +28,117 @@
       </address>
     </header>
     <main>
-      <h1>Portfolio</h1>
-      <ul>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
-      </ul>
-      <ul>
-        <li>
-          <img
-            src="./images/img-portfolio(4)min.jpg"
-            alt="Banking App Interface Concept"
-            width="360"
-          />
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-portfolio(5)min.jpg"
-            alt="Cashless Payment"
-            width="360"
-          />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-portfolio(6)min.jpg"
-            alt="Meditation App"
-            width="360"
-          />
-          <h3>Meditation App</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-portfolio(7)min.jpg"
-            alt="Taxi Service"
-            width="360"
-          />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-portfolio(12)min.jpg"
-            alt="Screen Illustrations"
-            width="360"
-          />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-portfolio(8)min.jpg"
-            alt="Online Courses"
-            width="360"
-          />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-portfolio(9)min.jpg"
-            alt="Instagram Stories Concept"
-            width="360"
-          />
-          <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-portfolio(11)min.jpg"
-            alt="Organic Food"
-            width="360"
-          />
-          <h3>Organic Food</h3>
-          <p>Web Site</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-portfolio(10)min.jpg"
-            alt="Fresh Coffee"
-            width="360"
-          />
-          <h3>Fresh Coffee</h3>
-          <p>Web Site</p>
-        </li>
-      </ul>
+      <section>
+        <h1>Portfolio</h1>
+        <ul>
+          <li><button type="button">All</button></li>
+          <li><button type="button">Web Site</button></li>
+          <li><button type="button">App</button></li>
+          <li><button type="button">Design</button></li>
+          <li><button type="button">Marketing</button></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="" target="_blank">
+              <img
+                src="./images/img-portfolio(4)min.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+              />
+              <h2>Banking App Interface Concept</h2>
+              <p>App</p>
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank">
+              <img
+                src="./images/img-portfolio(5)min.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h2>Cashless Payment</h2>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank">
+              <img
+                src="./images/img-portfolio(6)min.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h2>Meditation App</h2>
+              <p>App</p>
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank">
+              <img
+                src="./images/img-portfolio(7)min.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h2>Taxi Service</h2>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank">
+              <img
+                src="./images/img-portfolio(12)min.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h2>Screen Illustrations</h2>
+              <p>Design</p>
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank">
+              <img
+                src="./images/img-portfolio(8)min.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h2>Online Courses</h2>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank">
+              <img
+                src="./images/img-portfolio(9)min.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+              />
+              <h2>Instagram Stories Concept</h2>
+              <p>Design</p>
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank">
+              <img
+                src="./images/img-portfolio(11)min.jpg"
+                alt="Organic Food"
+                width="360"
+              />
+              <h2>Organic Food</h2>
+              <p>Web Site</p>
+            </a>
+          </li>
+          <li>
+            <a href="" target="_blank">
+              <img
+                src="./images/img-portfolio(10)min.jpg"
+                alt="Fresh Coffee"
+                width="360"
+              />
+              <h2>Fresh Coffee</h2>
+              <p>Web Site</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <!--Footer-->
     <footer>
