--- a/index.html
+++ b/index.html
@@ -4,63 +4,80 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <!-- Header-->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="header-logo logo" href="./index.html"
+          >Web<span class="header-logo">Studio</span></a
+        >
+        <ul class="nav-list list">
+          <li class="nav-item"><a class="nav-link link" href="">Studio</a></li>
+          <li class="nav-item">
+            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="header-contacts">
+        <ul class="contacts-list list">
+          <li class="contacts-item">
+            <a class="contacts-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contacts-item">
+            <a class="contacts-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <main>
       <!--Hero section-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-section section">
+        <h1 class="hero-title title">Effective Solutions for Your Business</h1>
+        <button class="hero-button button" type="button">Order Service</button>
       </section>
       <!--Preference section-->
-      <section>
-        <h2>Our advantages</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="preference-section section">
+        <h2 class="preference-title title">Our advantages</h2>
+        <ul class="preference-list list">
+          <li class="preference-item">
+            <h3 class="title">Strategy</h3>
+            <p class="preference-text text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="title">Punctuality</h3>
+            <p class="preference-text text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="title">Diligence</h3>
+            <p class="preference-text text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="title">Technologies</h3>
+            <p class="preference-text text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -68,55 +85,57 @@
         </ul>
       </section>
       <!--Activity section-->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="activity-section section">
+        <h2 class="activity-title title">What are we doing</h2>
+        <ul class="activity-list list">
+          <li class="activity-item">
             <img src="./images/img1(1).jpg" alt="monitor" width="360" />
           </li>
-          <li>
+          <li class="activity-item">
             <img
               src="./images/img2(1).jpg"
               alt="messenger in the phone"
               width="360"
             />
           </li>
-          <li>
+          <li class="activity-item">
             <img src="./images/img3(1).jpg" alt="phone in hands" width="360" />
           </li>
         </ul>
       </section>
       <!--Team section-->.
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team-section section">
+        <h2 class="team-title title">Our Team</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img src="./images/img(4).jpg" alt="man" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/img(1)(1).jpg" alt="man" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/img(2)(1).jpg" alt="woman" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/img(3)(1).jpg" alt="man" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer-->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-link link logo" href="./index.html"
+        >Web<span class="footer-logo">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
