--- a/portfolio.html
+++ b/portfolio.html
@@ -28,101 +28,101 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Portfolio</h1>
-        <ul>
+      <section class="portfolio-section section">
+        <h1 class="portfolio-title">Portfolio</h1>
+        <ul class="filters-list">
           <li><button type="button">All</button></li>
           <li><button type="button">Web Site</button></li>
           <li><button type="button">App</button></li>
           <li><button type="button">Design</button></li>
           <li><button type="button">Marketing</button></li>
         </ul>
-        <ul>
-          <li>
+        <ul class="portfolio-lisr">
+          <li class="portfolio-item">
             <a href="" target="_blank">
               <img
                 src="./images/img-portfolio(4)min.jpg"
                 alt="Banking App Interface Concept"
                 width="360"
               />
-              <h2>Banking App Interface Concept</h2>
+              <h2 class="">Banking App Interface Concept</h2>
               <p>App</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" target="_blank">
               <img
                 src="./images/img-portfolio(5)min.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
-              <h2>Cashless Payment</h2>
+              <h2 class="">Cashless Payment</h2>
               <p>Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" target="_blank">
               <img
                 src="./images/img-portfolio(6)min.jpg"
                 alt="Meditation App"
                 width="360"
               />
-              <h2>Meditation App</h2>
+              <h2 class="">Meditation App</h2>
               <p>App</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" target="_blank">
               <img
                 src="./images/img-portfolio(7)min.jpg"
                 alt="Taxi Service"
                 width="360"
               />
-              <h2>Taxi Service</h2>
+              <h2 class="">Taxi Service</h2>
               <p>Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" target="_blank">
               <img
                 src="./images/img-portfolio(12)min.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h2>Screen Illustrations</h2>
+              <h2 class="">Screen Illustrations</h2>
               <p>Design</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" target="_blank">
               <img
                 src="./images/img-portfolio(8)min.jpg"
                 alt="Online Courses"
                 width="360"
               />
-              <h2>Online Courses</h2>
+              <h2 class="">Online Courses</h2>
               <p>Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" target="_blank">
               <img
                 src="./images/img-portfolio(9)min.jpg"
                 alt="Instagram Stories Concept"
                 width="360"
               />
-              <h2>Instagram Stories Concept</h2>
+              <h2 class="">Instagram Stories Concept</h2>
               <p>Design</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-item">
             <a href="" target="_blank">
               <img
                 src="./images/img-portfolio(11)min.jpg"
                 alt="Organic Food"
                 width="360"
               />
-              <h2>Organic Food</h2>
+              <h2 class="">Organic Food</h2>
               <p>Web Site</p>
             </a>
           </li>
@@ -133,7 +133,7 @@
                 alt="Fresh Coffee"
                 width="360"
               />
-              <h2>Fresh Coffee</h2>
+              <h2 class="">Fresh Coffee</h2>
               <p>Web Site</p>
             </a>
           </li>
