--- a/portfolio.html
+++ b/portfolio.html
@@ -4,25 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <!-- Header-->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo link" href="./index.html"
+          >Web<span class="header-logo">Studio</span></a
+        >
+        <ul class="nav-list list">
+          <li class="nav-item"><a class="nav-link link" href="">Studio</a></li>
+          <li class="nav-item">
+            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address class="header-contacts">
+        <ul class="contacts-list list">
+          <li class="contacts-item">
+            <a class="contacts-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contacts-item">
+            <a class="contacts-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -30,120 +47,122 @@
     <main>
       <section class="portfolio-section section">
         <h1 class="portfolio-title">Portfolio</h1>
-        <ul class="filters-list">
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+        <ul class="filters-list list">
+          <li><button class="button" type="button">All</button></li>
+          <li><button class="button" type="button">Web Site</button></li>
+          <li><button class="button" type="button">App</button></li>
+          <li><button class="button" type="button">Design</button></li>
+          <li><button class="button" type="button">Marketing</button></li>
         </ul>
-        <ul class="portfolio-lisr">
+        <ul class="portfolio-list list">
           <li class="portfolio-item">
-            <a href="" target="_blank">
+            <a class="link" href="" target="_blank">
               <img
                 src="./images/img-portfolio(4)min.jpg"
                 alt="Banking App Interface Concept"
                 width="360"
               />
-              <h2 class="">Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="title">Banking App Interface Concept</h2>
+              <p class="text">App</p>
             </a>
           </li>
           <li class="portfolio-item">
-            <a href="" target="_blank">
+            <a class="link" href="" target="_blank">
               <img
                 src="./images/img-portfolio(5)min.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
-              <h2 class="">Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="title">Cashless Payment</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li class="portfolio-item">
-            <a href="" target="_blank">
+            <a class="link" href="" target="_blank">
               <img
                 src="./images/img-portfolio(6)min.jpg"
                 alt="Meditation App"
                 width="360"
               />
-              <h2 class="">Meditation App</h2>
-              <p>App</p>
+              <h2 class="title">Meditation App</h2>
+              <p class="text">App</p>
             </a>
           </li>
           <li class="portfolio-item">
-            <a href="" target="_blank">
+            <a class="link" href="" target="_blank">
               <img
                 src="./images/img-portfolio(7)min.jpg"
                 alt="Taxi Service"
                 width="360"
               />
-              <h2 class="">Taxi Service</h2>
-              <p>Marketing</p>
+              <h2 class="title">Taxi Service</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li class="portfolio-item">
-            <a href="" target="_blank">
+            <a class="link" href="" target="_blank">
               <img
                 src="./images/img-portfolio(12)min.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h2 class="">Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="title">Screen Illustrations</h2>
+              <p class="text">Design</p>
             </a>
           </li>
           <li class="portfolio-item">
-            <a href="" target="_blank">
+            <a class="link" href="" target="_blank">
               <img
                 src="./images/img-portfolio(8)min.jpg"
                 alt="Online Courses"
                 width="360"
               />
-              <h2 class="">Online Courses</h2>
-              <p>Marketing</p>
+              <h2 class="title">Online Courses</h2>
+              <p class="text">Marketing</p>
             </a>
           </li>
           <li class="portfolio-item">
-            <a href="" target="_blank">
+            <a class="link" href="" target="_blank">
               <img
                 src="./images/img-portfolio(9)min.jpg"
                 alt="Instagram Stories Concept"
                 width="360"
               />
-              <h2 class="">Instagram Stories Concept</h2>
-              <p>Design</p>
+              <h2 class="title">Instagram Stories Concept</h2>
+              <p class="text">Design</p>
             </a>
           </li>
           <li class="portfolio-item">
-            <a href="" target="_blank">
+            <a class="link" href="" target="_blank">
               <img
                 src="./images/img-portfolio(11)min.jpg"
                 alt="Organic Food"
                 width="360"
               />
-              <h2 class="">Organic Food</h2>
-              <p>Web Site</p>
+              <h2 class="title">Organic Food</h2>
+              <p class="text">Web Site</p>
             </a>
           </li>
           <li>
-            <a href="" target="_blank">
+            <a class="link" href="" target="_blank">
               <img
                 src="./images/img-portfolio(10)min.jpg"
                 alt="Fresh Coffee"
                 width="360"
               />
-              <h2 class="">Fresh Coffee</h2>
-              <p>Web Site</p>
+              <h2 class="title">Fresh Coffee</h2>
+              <p class="text">Web Site</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer-->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo link" href="./index.html"
+        >Web<span class="footer-logo">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
