--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Header-->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo logo" href="./index.html"
+        <a class="logo link" href="./index.html"
           >Web<span class="header-logo">Studio</span></a
         >
         <ul class="nav-list list">
@@ -47,12 +47,12 @@
     <main>
       <!--Hero section-->
       <section class="hero-section section">
-        <h1 class="hero-title title">Effective Solutions for Your Business</h1>
-        <button class="hero-button button" type="button">Order Service</button>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="button" type="button">Order Service</button>
       </section>
       <!--Preference section-->
       <section class="preference-section section">
-        <h2 class="preference-title title">Our advantages</h2>
+        <h2 class="section-title">Our advantages</h2>
         <ul class="preference-list list">
           <li class="preference-item">
             <h3 class="title">Strategy</h3>
@@ -86,7 +86,7 @@
       </section>
       <!--Activity section-->
       <section class="activity-section section">
-        <h2 class="activity-title title">What are we doing</h2>
+        <h2 class="section-title">What are we doing</h2>
         <ul class="activity-list list">
           <li class="activity-item">
             <img src="./images/img1(1).jpg" alt="monitor" width="360" />
@@ -105,34 +105,34 @@
       </section>
       <!--Team section-->.
       <section class="team-section section">
-        <h2 class="team-title title">Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul class="team-list list">
           <li class="team-item">
             <img src="./images/img(4).jpg" alt="man" width="264" />
             <h3 class="title">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img src="./images/img(1)(1).jpg" alt="man" width="264" />
             <h3 class="title">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
+            <p class="text">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img src="./images/img(2)(1).jpg" alt="woman" width="264" />
             <h3 class="title">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
+            <p class="text">Marketing</p>
           </li>
           <li class="team-item">
             <img src="./images/img(3)(1).jpg" alt="man" width="264" />
             <h3 class="title">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer-->
     <footer class="footer">
-      <a class="footer-link link logo" href="./index.html"
+      <a class="logo link" href="./index.html"
         >Web<span class="footer-logo">Studio</span></a
       >
       <p class="footer-text">
