--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           >Web<span class="header-logo">Studio</span></a
         >
         <ul class="nav-list list">
-          <li class="nav-item"><a class="nav-link link" href="">Studio</a></li>
+          <li class="nav-item">
+            <a class="nav-link link" href="./index.html">Studio</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link link" href="./portfolio.html">Portfolio</a>
           </li>
@@ -112,11 +114,12 @@
             <h3 class="title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/img(1)(1).jpg" alt="man" width="264" />
             <h3 class="title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
+
           <li class="team-item">
             <img src="./images/img(2)(1).jpg" alt="woman" width="264" />
             <h3 class="title">Camila Garcia</h3>
