--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,9 @@
           >Web<span class="header-logo">Studio</span></a
         >
         <ul class="nav-list list">
-          <li class="nav-item"><a class="nav-link link" href="">Studio</a></li>
+          <li class="nav-item">
+            <a class="nav-link link" href="./index.html">Studio</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link link" href="./portfolio.html">Portfolio</a>
           </li>
