--- a/portfolio.html
+++ b/portfolio.html
@@ -50,17 +50,29 @@
       <section class="portfolio-section section">
         <h1 class="portfolio-title">Portfolio</h1>
         <ul class="filters-list list">
-          <li><button class="button" type="button">All</button></li>
-          <li><button class="button" type="button">Web Site</button></li>
-          <li><button class="button" type="button">App</button></li>
-          <li><button class="button" type="button">Design</button></li>
-          <li><button class="button" type="button">Marketing</button></li>
+          <li>
+            <button class="filter-button button" type="button">All</button>
+          </li>
+          <li>
+            <button class="filter-button button" type="button">Web Site</button>
+          </li>
+          <li>
+            <button class="filter-button button" type="button">App</button>
+          </li>
+          <li>
+            <button class="filter-button button" type="button">Design</button>
+          </li>
+          <li>
+            <button class="filter-button button" type="button">
+              Marketing
+            </button>
+          </li>
         </ul>
         <ul class="portfolio-list list">
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/img-portfolio(4)min.jpg"
+                src="./images/portfolio(4)min.jpg"
                 alt="Banking App Interface Concept"
                 width="360"
               />
@@ -71,7 +83,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/img-portfolio(5)min.jpg"
+                src="./images/portfolio(5)min.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
@@ -82,7 +94,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/img-portfolio(6)min.jpg"
+                src="./images/portfolio(6)min.jpg"
                 alt="Meditation App"
                 width="360"
               />
@@ -93,7 +105,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/img-portfolio(7)min.jpg"
+                src="./images/portfolio(7)min.jpg"
                 alt="Taxi Service"
                 width="360"
               />
@@ -104,7 +116,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/img-portfolio(12)min.jpg"
+                src="./images/portfolio(12)min.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
@@ -115,7 +127,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/img-portfolio(8)min.jpg"
+                src="./images/portfolio(8)min.jpg"
                 alt="Online Courses"
                 width="360"
               />
@@ -126,7 +138,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/img-portfolio(9)min.jpg"
+                src="./images/portfolio(9)min.jpg"
                 alt="Instagram Stories Concept"
                 width="360"
               />
@@ -137,7 +149,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/img-portfolio(11)min.jpg"
+                src="./images/portfolio(11)min.jpg"
                 alt="Organic Food"
                 width="360"
               />
@@ -148,7 +160,7 @@
           <li>
             <a class="link" href="" target="_blank">
               <img
-                src="./images/img-portfolio(10)min.jpg"
+                src="./images/portfolio(10)min.jpg"
                 alt="Fresh Coffee"
                 width="360"
               />
