--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/portfolio(4)min.jpg"
+                src="./images/portfolio4.jpg"
                 alt="Banking App Interface Concept"
                 width="360"
               />
@@ -83,7 +83,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/portfolio(5)min.jpg"
+                src="./images/portfolio5.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
@@ -94,7 +94,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/portfolio(6)min.jpg"
+                src="./images/portfolio6.jpg"
                 alt="Meditation App"
                 width="360"
               />
@@ -105,7 +105,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/portfolio(7)min.jpg"
+                src="./images/portfolio7.jpg"
                 alt="Taxi Service"
                 width="360"
               />
@@ -116,7 +116,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/portfolio(12)min.jpg"
+                src="./images/portfolio12.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
@@ -127,7 +127,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/portfolio(8)min.jpg"
+                src="./images/portfolio8.jpg"
                 alt="Online Courses"
                 width="360"
               />
@@ -138,7 +138,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/portfolio(9)min.jpg"
+                src="./images/portfolio9.jpg"
                 alt="Instagram Stories Concept"
                 width="360"
               />
@@ -149,7 +149,7 @@
           <li class="portfolio-item">
             <a class="link" href="" target="_blank">
               <img
-                src="./images/portfolio(11)min.jpg"
+                src="./images/portfolio11.jpg"
                 alt="Organic Food"
                 width="360"
               />
@@ -160,7 +160,7 @@
           <li>
             <a class="link" href="" target="_blank">
               <img
-                src="./images/portfolio(10)min.jpg"
+                src="./images/portfolio10.jpg"
                 alt="Fresh Coffee"
                 width="360"
               />
